ajustes solicitudes y otros textos

--- a/src/pages/consumidor_financiero/index.html
+++ b/src/pages/consumidor_financiero/index.html
@@ -523,6 +523,7 @@
           </div>
 
           <div class="as__terms_info">
+            <h1>Superintendencia Financiera</h1>
             <a
               href="https://www.superfinanciera.gov.co/jsp/index.jsf"
               target="_blank"
@@ -530,10 +531,9 @@
               <img
                 class="max-w-xs mb-4"
                 src="/assets/images/super.png"
-                alt="Superintendencia financiera"
+                alt="Superintendencia Financiera"
               />
             </a>
-            <h1>Superintendencia financiera</h1>
             <div>
               <p>
                 Adem&aacute;s de la Defensora del Consumidor Financiero, cuentas
@@ -550,13 +550,12 @@
           </div>
 
           <div class="as__terms_info">
+            <h1>Educaci&oacute;n financiera</h1>
             <img
               class="max-w-xs mb-2 mix-blend-multiply"
               src="/assets/images/fase.png"
               alt="Superintendencia financiera"
             />
-            <h1>Educaci&oacute;n financiera</h1>
-
             <p>
               Para nosotros es importante dar a conocer los conceptos básicos de
               finanzas personales, seguros y el manejo del dinero, para ello
