--- a/src/pages/gestion_documentos/index.html
+++ b/src/pages/gestion_documentos/index.html
@@ -111,7 +111,7 @@
                 "data": "2",
                 "title": "Certificado de estudio",
                 "subtitle": "",
-                "que": "Es la certificación acreditada por la institución del programa académico que estan cursando los beneficiarios entre los 18 y los 25 años, ésta se solicita con el fin de sustentar el cumplimiento a la norma y así garantizar la condición de derecho para recibir las mesadas de tu póliza de sobrevivencia.",
+                "que": "Es la certificación acreditada por la institución del programa académico que estan cursando los beneficiarios entre los 18 y los 25 años, esta se solicita con el fin de sustentar el cumplimiento a la norma y así garantizar la condición de derecho para recibir las mesadas de tu póliza de sobrevivencia.",
                 "documento": "Certificado de la institución vigilada por el Ministerio de Educación,",
                 "documento_sig": "donde informe el semestre que vas a cursar y se evidencia el cumplimiento mínimo de las 20 horas semanales del programa.",
                 "gestion": "Certificado de estudio"
@@ -181,7 +181,7 @@
                 "data": "7",
                 "title": "Redistribución de mesada",
                 "subtitle": "",
-                "que": "La redistribución pensional es la asignación de los derechos pensionales a favor de otro beneficiario con derecho a percibir la mesada pensional.",
+                "que": "La redistribución pensional es la asignación de los derechos pensionales a favor de otro beneficiario con derecho a recibir la mesada pensional.",
                 "documento": "Formato redistribución de mesadas.",
                 "documento_sig": "",
                 "gestion": "Inclusión/Exclusión de Beneficiario"
