--- a/src/pages/solicitudes/index.html
+++ b/src/pages/solicitudes/index.html
@@ -51,7 +51,7 @@
     <include src="solicitudes/tabs.html" locals='{"cls":"pt-8"}'></include>
     <section class="as__section as__g_solicitudes">
       <div class="as__section_wrapper">
-        <div class="as__section_content">
+        <div class="">
           <div class="as__g_documentos_top">
             <div class="as__g_documentos_wrapper">
               <i
@@ -63,22 +63,41 @@
                 </h2>
                 <div class="sol_info">
                   <i> </i>
-                  <p>
-                    También puedes comunicarte a nuestra línea gratuita nacional
-                    <a
-                      href="tel:018000412854"
-                      target="_blank"
-                      class="inline-block"
-                      >01 8000 412 854</a
-                    >
-                    o si estás ubicado en Medellín al
-                    <a
-                      href="tel:6044026876"
-                      target="_blank"
-                      class="inline-block"
-                      >(604) 402 6876</a
-                    >.
-                  </p>
+                  <div>
+                    <p>
+                      *Las peticiones, quejas, reclamos o solicitudes que
+                      formulen los consumidores financieros, los podrás
+                      registrar a través de:
+                    </p>
+                    <ul>
+                      <li>Página web de la Compañía: www.asulado.com.</li>
+                      <li>
+                        Línea gratuita nacional
+                        <a
+                          href="tel:018000412854"
+                          target="_blank"
+                          class="inline-block"
+                          >01 8000 412 854</a
+                        >
+                        o si estás ubicado en Medellín al
+                        <a
+                          href="tel:6044026876"
+                          target="_blank"
+                          class="inline-block"
+                          >(604) 402 6876</a
+                        >.
+                      </li>
+                      <li>
+                        Correo electrónico de notificaciones judiciales. Este
+                        correo se dispone para recepción de acciones legales
+                        emitidas por juzgados y entes regulatorios.
+                      </li>
+                      <li>Defensor del Consumidor Financiero</li>
+                      <li>
+                        A través de nuestros corresponsales de REVAL-Multipagas.
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
@@ -104,6 +123,31 @@
       </div>
     </section>
     <include src="solicitudes/sol_form.html" locals='{"cls":""}'></include>
+    <section class="as__section bg-BG-4 py-5">
+      <div class="as__section_wrapper">
+        <div class="flex flex-col gap-y-2 text-azul-dark text-sm">
+          <p>
+            *En el caso de la Superintendencia Financiera de Colombia en
+            relación con las entidades vigiladas, se proyecta habilitar la
+            radicación de Quejas y/o Reclamos a través de la página web de esta
+            entidad.
+          </p>
+          <p>
+            En caso de no poder resolverla, el asesor de servicio escalará tu
+            caso al Equipo de Atención a Clientes quien evaluará dicha
+            solicitud.
+          </p>
+          <p>
+            La Aseguradora responderá las peticiones y solicitudes de los
+            consumidores financieros, de conformidad al artículo 14 de la Ley
+            1755 de 2015, dentro de los quince (15) días siguientes a su
+            recepción. Sin embargo, si se tratara de peticiones de documentos o
+            información, esta se resolverá dentro de los diez (10) días
+            siguientes a su recepción.
+          </p>
+        </div>
+      </div>
+    </section>
   </block>
 
   <!-- FIN CONTENIDO DEL HOME -->
