--- a/src/pages/solicitudes/index.html
+++ b/src/pages/solicitudes/index.html
@@ -46,12 +46,12 @@
   <block name="content">
     <include
       src="top.html"
-      locals='{ "bg": "bg-BG-1", "image": "top_solicitudes.webp", "t1start":"1", "t2start":"3", "title1": "Gestiona", "title2": "tus solicitudes" }'
+      locals='{ "bg": "bg-BG-1 mar_t", "image": "top_solicitudes.webp", "t1start":"1", "t2start":"3", "title1": "Gestiona", "title2": "tus solicitudes" }'
     ></include>
     <include src="solicitudes/tabs.html" locals='{"cls":"pt-8"}'></include>
     <section class="as__section as__g_solicitudes">
       <div class="as__section_wrapper">
-        <div class="">
+        <div class="as__section_wrapper full">
           <div class="as__g_documentos_top">
             <div class="as__g_documentos_wrapper">
               <i
