--- a/src/pages/consumidor_financiero/index.html
+++ b/src/pages/consumidor_financiero/index.html
@@ -31,7 +31,7 @@
   <block name="content">
     <include
       src="top.html"
-      locals='{ "bg": "bg-BG-1", "image": "top_solicitudes.webp", "t1start":"1", "t2start":"3", "title1": "Consumidor", "title2": "Financiero" }'
+      locals='{ "bg": "bg-BG-1 mar_t", "image": "top_solicitudes.webp", "t1start":"1", "t2start":"3", "title1": "Consumidor", "title2": "Financiero" }'
     ></include>
 
     <section class="as__section as__g_solicitudes">
