ajustes header gobierno

--- a/src/pages/gobierno_corporativo/index.html
+++ b/src/pages/gobierno_corporativo/index.html
@@ -91,6 +91,27 @@
               "data": "1"
             }'
             ></include>
+            <include
+              src="gobierno/3_organos.html"
+              locals='{
+              "cls": "",
+              "data": "2"
+            }'
+            ></include>
+            <include
+              src="gobierno/4_informes.html"
+              locals='{
+              "cls": "",
+              "data": "3"
+            }'
+            ></include>
+            <include
+            src="gobierno/5_altagerencia.html"
+            locals='{
+            "cls": "",
+            "data": "4"
+          }'
+          ></include>
           </div>
         </div>
       </div>
