Calendario de pagos popup

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -51,7 +51,7 @@
             directamente en tu correo electrónico.
           </p>
           <a href="/suscribete" class="as__button">
-            <span>Suscríbirme</span>
+            <span>Suscribirme</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
           <div class="modal_check">
