--- a/src/pages/gobierno_corporativo/index.html
+++ b/src/pages/gobierno_corporativo/index.html
@@ -53,10 +53,11 @@
               <div class="as__g_documentos_int">
                 <h2>Generalidades</h2>
                 <p>
-                  Somos una compañía que busca dinamizar el mercado de des Z
-                  acumulación patrimonial y completar la oferta de aseguramiento
-                  que tiene el sistema de pensiones de ahorro individual en las
-                  modalidades de renta vitalic ia y seguro previsional.
+                  Somos una compañía que busca dinamizar el mercado de
+                  desacumulación patrimonial y completar la oferta de
+                  aseguramiento que tiene el sistema de pensiones de ahorro
+                  individual en las modalidades de Renta Vitalicia y Seguro
+                  Previsional.
                 </p>
                 <p>
                   Queremos acompañar a los colombianos para que puedan construir
@@ -106,12 +107,12 @@
             }'
             ></include>
             <include
-            src="gobierno/5_altagerencia.html"
-            locals='{
+              src="gobierno/5_altagerencia.html"
+              locals='{
             "cls": "",
             "data": "4"
           }'
-          ></include>
+            ></include>
           </div>
         </div>
       </div>
