ajuste de imagen y popup

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -46,12 +46,13 @@
         </form>
         <div class="modal_info">
           <img src="/assets/images/top_suscribete.webp" alt="Suscríbete" />
+          <h3>¡Queremos estar siempre a tu lado!</h3>
           <p>
-            <b>Suscríbete ahora</b> y recibe la información más importante
-            directamente en tu correo electrónico.
+            Suscríbete a nuestro boletín y elige la información que más te
+            interesa
           </p>
           <a href="/suscribete" class="as__button">
-            <span>Suscribirme</span>
+            <span>Quiero registrarme</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
           <div class="modal_check">
