--- a/src/pages/calendario_pagos/index.html
+++ b/src/pages/calendario_pagos/index.html
@@ -54,8 +54,25 @@
               aria-hidden="true"
             ></i>
             <div class="calendario-top-info">
-              <p>Conoce el cronograma pago de nómina a pensionados.</p>
-              <div>El próximo pago será el <span id="proximo_pago"></span></div>
+              <p>
+                ¡Conoce el calendario de pagos de tu mesada pensional como
+                cliente de ASULADO!
+              </p>
+              <div class="infop">
+                El próximo pago será el <span id="proximo_pago"></span>
+              </div>
+              <ul class="infot">
+                <li><span class="today"></span> Fecha actual</li>
+                <li>
+                  <span class="novedad"></span> Fecha máxima para reportar tus
+                  novedades y queden aplicadas el mismo mes, de lo contrario
+                  quedarán registradas para el siguiente mes
+                </li>
+                <li>
+                  <span class="last_day"></span> Fecha máxima para recibir el
+                  pago de tu pensión
+                </li>
+              </ul>
             </div>
           </div>
           <div class="calendar"></div>
