--- a/src/pages/suscribete/index.html
+++ b/src/pages/suscribete/index.html
@@ -57,11 +57,14 @@
               <i
                 class="as__g_documentos_ico fa-sharp fa-solid fa-circle-info"
               ></i>
-              <h3>
-                Queremos estar más cerca de ti, por eso, para tu comodidad,
-                podrás elegir qué información quieres recibir de ASULADO cada
-                mes.
-              </h3>
+              <div class="flex flex-col gap-y-4">
+                <h3>
+                  Queremos estar más cerca de ti, por eso, para tu comodidad,
+                  podrás elegir qué información quieres recibir de ASULADO cada
+                  mes.
+                </h3>
+                <p class="text-azul-dark">Servicio exclusivo para clientes ASULADO</p>
+              </div>
             </div>
           </div>
         </div>
