--- a/src/pages/suscribete/index.html
+++ b/src/pages/suscribete/index.html
@@ -63,7 +63,9 @@
                   podrás elegir qué información quieres recibir de ASULADO cada
                   mes.
                 </h3>
-                <p class="text-azul-dark">Servicio exclusivo para clientes ASULADO</p>
+                <p class="text-azul-dark">
+                  Servicio exclusivo para clientes ASULADO
+                </p>
               </div>
             </div>
           </div>
