footeer, mensaje suscribete

--- a/src/pages/solicitudes/index.html
+++ b/src/pages/solicitudes/index.html
@@ -51,73 +51,71 @@
     <include src="solicitudes/tabs.html" locals='{"cls":"pt-8"}'></include>
     <section class="as__section as__g_solicitudes">
       <div class="as__section_wrapper">
-        <div class="as__section_wrapper full">
-          <div class="as__g_documentos_top">
-            <div class="as__g_documentos_wrapper">
-              <i
-                class="as__g_documentos_ico fa-sharp fa-solid fa-circle-info"
-              ></i>
-              <div class="as__g_documentos_title">
-                <h2>
-                  <span>¡Estamos atentos a tus necesidades!</span>
-                </h2>
-                <div class="sol_info">
-                  <i> </i>
-                  <div>
-                    <p>
-                      *Las peticiones, quejas, reclamos o solicitudes que
-                      formulen los consumidores financieros, los podrás
-                      registrar a través de:
-                    </p>
-                    <ul>
-                      <li>Página web de la Compañía: www.asulado.com.</li>
-                      <li>
-                        Línea gratuita nacional
-                        <a
-                          href="tel:018000412854"
-                          target="_blank"
-                          class="inline-block"
-                          >01 8000 412 854</a
-                        >
-                        o si estás ubicado en Medellín al
-                        <a
-                          href="tel:6044026876"
-                          target="_blank"
-                          class="inline-block"
-                          >(604) 402 6876</a
-                        >.
-                      </li>
-                      <li>
-                        Correo electrónico de notificaciones judiciales. Este
-                        correo se dispone para recepción de acciones legales
-                        emitidas por juzgados y entes regulatorios.
-                      </li>
-                      <li>Defensor del Consumidor Financiero</li>
-                      <li>
-                        A través de nuestros corresponsales de REVAL-Multipagas.
-                      </li>
-                    </ul>
-                  </div>
+        <div class="as__g_documentos_top">
+          <div class="as__g_documentos_wrapper">
+            <i
+              class="as__g_documentos_ico fa-sharp fa-solid fa-circle-info"
+            ></i>
+            <div class="as__g_documentos_title">
+              <h2>
+                <span>¡Estamos atentos a tus necesidades!</span>
+              </h2>
+              <div class="sol_info">
+                <i> </i>
+                <div>
+                  <p>
+                    *Las peticiones, quejas, reclamos o solicitudes que formulen
+                    los consumidores financieros, los podrás registrar a través
+                    de:
+                  </p>
+                  <ul>
+                    <li>Página web de la Compañía: www.asulado.com.</li>
+                    <li>
+                      Línea gratuita nacional
+                      <a
+                        href="tel:018000412854"
+                        target="_blank"
+                        class="inline-block"
+                        >01 8000 412 854</a
+                      >
+                      o si estás ubicado en Medellín al
+                      <a
+                        href="tel:6044026876"
+                        target="_blank"
+                        class="inline-block"
+                        >(604) 402 6876</a
+                      >.
+                    </li>
+                    <li>
+                      Correo electrónico de notificaciones judiciales. Este
+                      correo se dispone para recepción de acciones legales
+                      emitidas por juzgados y entes regulatorios.
+                    </li>
+                    <li>Defensor del Consumidor Financiero</li>
+                    <li>
+                      A través de nuestros corresponsales de REVAL-Multipagas.
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
+          </div>
 
-            <div class="as__solicitudes_info">
-              <p>
-                Para nosotros es importante realizar seguimiento a tus
-                solicitudes.
-              </p>
-              <h4>¿Quieres conocer el estado de tu caso?</h4>
-              <a
-                href="/solicitudes_caso"
-                title="¿Quieres conocer el estado de tu
+          <div class="as__solicitudes_info">
+            <p>
+              Para nosotros es importante realizar seguimiento a tus
+              solicitudes.
+            </p>
+            <h4>¿Quieres conocer el estado de tu caso?</h4>
+            <a
+              href="/solicitudes_caso"
+              title="¿Quieres conocer el estado de tu
               caso?"
-                class="as__button small"
-              >
-                <span>MÁS INFORMACIÓN</span>
-                <i role="presentation" class="fa-light fa-arrow-right"></i>
-              </a>
-            </div>
+              class="as__button small"
+            >
+              <span>MÁS INFORMACIÓN</span>
+              <i role="presentation" class="fa-light fa-arrow-right"></i>
+            </a>
           </div>
         </div>
       </div>
