--- a/src/pages/suscribete/index.html
+++ b/src/pages/suscribete/index.html
@@ -50,7 +50,7 @@
     ></include>
 
     <section class="as__section as__g_solicitudes">
-      <div class="as__section_wrapper">
+      <div class="as__section_wrapper full">
         <div class="as__section_content_full">
           <div class="as__g_documentos_top">
             <div class="as__g_documentos_wrapper full">
@@ -64,7 +64,8 @@
                   mes.
                 </h3>
                 <p class="text-azul-dark">
-                  Servicio exclusivo para clientes ASULADO
+                  Cómo cliente de nuestra familia, ¡personaliza tu experiencia
+                  ahora!
                 </p>
               </div>
             </div>
