--- a/src/pages/consumidor_financiero/index.html
+++ b/src/pages/consumidor_financiero/index.html
@@ -35,7 +35,7 @@
     ></include>
 
     <section class="as__section as__g_solicitudes">
-      <div class="as__section_wrapper">
+      <div class="as__section_wrapper full">
         <div class="as__section_content as__terms">
           <div class="as__terms_info">
             <div>
