--- a/src/pages/gobierno_corporativo/index.html
+++ b/src/pages/gobierno_corporativo/index.html
@@ -43,7 +43,7 @@
       locals='{ "bg": "bg-BG-8", "image": "top_gobierno.webp", "t1start":"1", "t2start":"3", "title1": "Gobierno", "title2": "corporativo" }'
     ></include>
     <section class="as__section as__g_solicitudes plain">
-      <div class="as__section_wrapper">
+      <div class="as__section_wrapper full">
         <div class="as__section_content_full">
           <div class="as__g_documentos_top">
             <div class="as__g_documentos_wrapper full">
