--- a/src/pages/solicitudes/index.html
+++ b/src/pages/solicitudes/index.html
@@ -50,7 +50,7 @@
     ></include>
     <include src="solicitudes/tabs.html" locals='{"cls":"pt-8"}'></include>
     <section class="as__section as__g_solicitudes">
-      <div class="as__section_wrapper">
+      <div class="as__section_wrapper full">
         <div class="as__g_documentos_top">
           <div class="as__g_documentos_wrapper">
             <i
