blog y lusa chat

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,10 @@
     <include src="home/servicios.html"></include>
     <include src="home/cifras.html"></include>
     <include src="home/documentos.html"></include>
-    <!-- <include src="home/blog.html" locals='{ "button": "VER TODOS"}'></include> -->
+    <include
+      src="home/blog.html"
+      locals='{ "button": "VER TODOS",  "title":"Artículos de interés"}'
+    ></include>
 
     <!-- MODAL  -->
     <!-- <label for="modal_sus" class="btn">open modal</label> -->
