Add banner and inner section to home page

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -28,6 +28,48 @@
     <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
-  <block name="content"> HOME </block>
+  <block name="content">
+    <div class="pa__banner as__section">
+      <div class="pa_banner_int">
+        <div class="as__section_wrapper">
+          <div class="as__section_content">
+            <div class="pa_banner_img">
+              <img
+                src="/assets/images/PORTAL/banner_home_1.png"
+                alt="Bienvenida"
+              />
+            </div>
+            <div class="pa_banner_content">
+              <h2>{Nombre}</h2>
+              <h3>¡Bienvenido a nuestro nuevo portal transaccional!</h3>
+              <p>
+                Este es un lugar exclusivo para nuestros pensionados ASULADO.
+                Aquí podrás realizar tus solicitudes en el momento que lo desees
+                y de forma inmediata. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="as__section pa__inner_item">
+      <div class="pa_banner_int">
+        <div class="as__section_wrapper">
+          <div class="as__section_content pa__inner">
+            <div class="pa__inner_title">
+              <i class="i_ayuda fa-regular fa-list-check"></i>
+              <div>
+                <h2>Servicios a un clic</h2>
+                <p>
+                  ¡Ahora puedes gestionar todas tus solicitudes desde cualquier
+                  lugar! Solicita a través de nuestro nuevo portal: 
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
