Add duplicate include tags and fix file names in mix-manifest.json

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -133,6 +133,14 @@
                 src="PORTAL/p_home_articulo.html"
                 locals='{ "title":"5 consejos para aprovechar el seguro previsional", "image":"tmp_articulo.jpg", "content":"Laboris in officia irure duis irure aliqua do magna aliqua consectetur. Adipisicing occaecat qui ut voluptate ut Lorem in culpa est."}'
               ></include>
+              <include
+                src="PORTAL/p_home_articulo.html"
+                locals='{ "title":"5 consejos para aprovechar el seguro previsional", "image":"tmp_articulo.jpg", "content":"Laboris in officia irure duis irure aliqua do magna aliqua consectetur. Adipisicing occaecat qui ut voluptate ut Lorem in culpa est."}'
+              ></include>
+              <include
+                src="PORTAL/p_home_articulo.html"
+                locals='{ "title":"5 consejos para aprovechar el seguro previsional", "image":"tmp_articulo.jpg", "content":"Laboris in officia irure duis irure aliqua do magna aliqua consectetur. Adipisicing occaecat qui ut voluptate ut Lorem in culpa est."}'
+              ></include>
             </ul>
           </div>
         </div>
